Fix kq logo not showing on firefox

--- a/source/scss/components/_hero.scss
+++ b/source/scss/components/_hero.scss
@@ -6,7 +6,7 @@
   align-items: center;
   
   &__image {
-    max-width: 250px;
+    width: 250px;
   }
 
 
